Added the binaries to the project